--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,13 +4,12 @@ orbs:
 jobs:
   build:
     docker:
-      - image: circleci/golang:1.17
-    working_directory: /go/src/github.com/tilt-dev/clusterid
+      - image: cimg/go:1.17
     steps:
       - checkout
       - run: go get -v -t -d ./...
       - run: go test -v ./...
-      - run: cd .. && go get github.com/golangci/golangci-lint/cmd/golangci-lint@v1.38.0
+      - run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.38.0
       - run: make golangci-lint
       - slack/notify-on-failure:
           only_for_branches: main
